# wg-status

./: README.md  meson.build
data/: meson.build  org.mediclab.wgstatus.appdata.xml.in  org.mediclab.wgstatus.desktop.in  org.mediclab.wgstatus.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: about.vala  application.vala  main.vala  meson.build  nmcli.vala  wg_status_vala.gresource.xml
